<resources>
    <string name="app_name">Destination: SVG</string>
    <string name="main_looking">I\'m looking for</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="seaside_title">Enjoy The Seaside</string>
    <string name="seaside_imageDescription">Seaside Image</string>
    <string name="seaside_intro">1 day/night with the sea at your doorstep. Perfect for anyone who loves the waves, the wind, and the wide open sea.</string>
    <string name="seaside_header_discover">Discover</string>
    <string name="seaside_header_stay">Beachfront Accomodations</string>
    <string name="card_title_placeholder">Card Title</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Donec pretium vulputate sapien nec sagittis. Habitant morbi tristique senectus et. Auctor augue mauris augue neque gravida in fermentum et. Ut enim blandit volutpat maecenas volutpat blandit. Sagittis purus sit amet volutpat consequat mauris nunc. Vehicula ipsum a arcu cursus vitae congue mauris rhoncus. Volutpat commodo sed egestas egestas fringilla phasellus faucibus. Proin sagittis nisl rhoncus mattis rhoncus. Nunc lobortis mattis aliquam faucibus. Accumsan sit amet nulla facilisi. Id eu nisl nunc mi ipsum faucibus vitae aliquet nec. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue eget. Pellentesque elit ullamcorper dignissim cras. Metus dictum at tempor commodo. Et netus et malesuada fames ac. Dictum at tempor commodo ullamcorper a lacus. Etiam non quam lacus suspendisse faucibus interdum posuere lorem ipsum. Aenean euismod elementum nisi quis eleifend.  Adipiscing bibendum est ultricies integer quis auctor elit sed. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa eget. Nibh mauris cursus mattis molestie a iaculis at. Eu non diam phasellus vestibulum lorem. Lectus proin nibh nisl condimentum. Sed viverra tellus in hac habitasse platea dictumst vestibulum. A scelerisque purus semper eget duis. Nulla aliquet porttitor lacus luctus accumsan tortor posuere. Posuere lorem ipsum dolor sit amet consectetur adipiscing elit duis. Facilisi morbi tempus iaculis urna id. Tellus molestie nunc non blandit massa enim nec dui. Nunc congue nisi vitae suscipit tellus mauris. Nullam vehicula ipsum a arcu. Elementum integer enim neque volutpat ac tincidunt vitae semper quis. Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Id semper risus in hendrerit gravida rutrum quisque. Volutpat odio facilisis mauris sit amet massa vitae tortor.  Volutpat maecenas volutpat blandit aliquam etiam erat. Faucibus ornare suspendisse sed nisi lacus sed. Eget egestas purus viverra accumsan. Lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Id venenatis a condimentum vitae sapien. Est placerat in egestas erat. Tortor at auctor urna nunc id cursus metus. Elementum curabitur vitae nunc sed velit dignissim sodales. Sit amet mattis vulputate enim nulla aliquet porttitor lacus. Turpis egestas maecenas pharetra convallis. Ultricies mi quis hendrerit dolor magna eget est lorem ipsum.  Enim sed faucibus turpis in eu. Amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor. Ut tristique et egestas quis ipsum suspendisse. Purus semper eget duis at tellus at urna. Dapibus ultrices in iaculis nunc sed augue lacus viverra vitae. Sagittis id consectetur purus ut faucibus pulvinar elementum integer. Duis convallis convallis tellus id interdum velit laoreet id. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim. Id cursus metus aliquam eleifend mi in. Dolor magna eget est lorem ipsum dolor sit amet. Etiam sit amet nisl purus in mollis nunc. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar sapien et. Eu turpis egestas pretium aenean pharetra magna. At consectetur lorem donec massa sapien faucibus et molestie ac.  At in tellus integer feugiat scelerisque varius morbi. Quisque sagittis purus sit amet volutpat consequat. Eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Amet luctus venenatis lectus magna fringilla. Ultricies lacus sed turpis tincidunt id aliquet risus. Senectus et netus et malesuada fames ac turpis. Diam vulputate ut pharetra sit amet. Est lorem ipsum dolor sit amet consectetur adipiscing elit. Tellus elementum sagittis vitae et leo duis ut diam quam. Sociis natoque penatibus et magnis dis. Velit laoreet id donec ultrices tincidunt arcu. Nunc congue nisi vitae suscipit tellus mauris a diam. Integer malesuada nunc vel risus commodo viverra. Faucibus ornare suspendisse sed nisi lacus. Lorem dolor sed viverra ipsum nunc aliquet. Pellentesque sit amet porttitor eget.  Cursus mattis molestie a iaculis at erat pellentesque adipiscing. Ut faucibus pulvinar elementum integer enim neque volutpat. A pellentesque sit amet porttitor eget dolor morbi non. Blandit volutpat maecenas volutpat blandit aliquam etiam. Posuere urna nec tincidunt praesent. Aliquet bibendum enim facilisis gravida neque. Nulla posuere sollicitudin aliquam ultrices. Enim ut tellus elementum sagittis vitae et leo duis ut. Neque gravida in fermentum et sollicitudin ac orci phasellus egestas. Curabitur vitae nunc sed velit dignissim.</string>
</resources>
