<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/seaside_appbar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax">

                        <ImageView
                            android:id="@+id/seaside_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorPrimaryDark"
                            android:contentDescription="@string/seaside_imageDescription"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:scaleType="fitXY"
                            />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="125dp"
                            app:layout_constraintBottom_toBottomOf="@id/seaside_image"
                            android:background="@drawable/home_image_gradient"/>


                        <TextView
                            android:id="@+id/collapsable_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/seaside_title"
                            android:textSize="@dimen/page_title"
                            android:textColor="@color/white"
                            android:fontFamily="@font/roboto_bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="@id/seaside_image"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|exitUntilCollapsed" />
        </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.ama.tourism_svg.CustomWidgets.HeaderTextView
                android:id="@+id/seaside_header_discover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seaside_header_discover"
                android:textSize="@dimen/header_main"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/seaside_rv_discover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin_default"
                app:layout_constraintTop_toBottomOf="@id/seaside_header_discover" />

            <View
                android:layout_width="250dp"
                android:layout_height="@dimen/horizontal_line_size"
                android:layout_margin="@dimen/divider_margin_normal"
                android:layout_marginStart="352dp"
                android:layout_marginEnd="361dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@id/seaside_header_stay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seaside_rv_discover" />

            <com.ama.tourism_svg.CustomWidgets.HeaderTextView
                android:id="@+id/seaside_header_stay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seaside_header_stay"
                android:textSize="@dimen/header_main"
                app:layout_constraintTop_toBottomOf="@id/seaside_rv_discover" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                app:layout_constraintTop_toBottomOf="@id/seaside_header_stay" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

